deployment/acs/api-service-nolb.yaml
apiVersion: v1
kind: Service
metadata:
  name: acstest-api-svc
spec:
  ports:
    - port: 30100
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: acstest
    tier: internal-api
