deployment/acs/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acstest-api-svc
spec:
  ports:
    - port: 30100
      protocol: TCP
      targetPort: 80
  selector:
    app: acstest
    tier: internal-api
  sessionAffinity: None
  type: LoadBalancer
